--- a/tickevents-placeholder/src/app/app.component.css
+++ b/tickevents-placeholder/src/app/app.component.css
@@ -352,8 +352,8 @@ ol li::before {
 }
 
 .third-row {
-  -webkit-clip-path: polygon(0 5%, 100% 0, 100% 100%, 0 95%);
-  clip-path: polygon(0 5%, 100% 0, 100% 100%, 0 95%);
+  -webkit-clip-path: polygon(0 8%, 100% 0, 100% 92%, 0 100%);
+  clip-path: polygon(0 8%, 100% 0, 100% 92%, 0 100%);
   background: linear-gradient(270deg, #092134, #0C2C45);
   min-height: 350px;
 }
@@ -399,7 +399,9 @@ ol li::before {
 
 .footer-logo {
   width: auto;
-  height: 100px;
+  height: auto;
+  max-height: 100px !important;
+  max-width: 100% !important;
 }
 
 .line {
