Scroll to element bugfix

--- a/tickevents-placeholder/src/app/app.component.html
+++ b/tickevents-placeholder/src/app/app.component.html
@@ -41,7 +41,7 @@
 					<div class="col-12">
 						<div class="row no-gutters justify-content-center mt-1 mt-md-5">
 							<div class="col-xl-3 col-lg-4 col-md-5 col-sm-6 col-10">
-								<button class="btn w-100 btn-lg">Maak een evenement aan!</button>
+								<button class="btn w-100 btn-lg" (click)="scroll(target)">Maak een evenement aan!</button>
 							</div>
 						</div>
 					</div>
@@ -176,7 +176,7 @@
 		<div class="col-12 col-sm-11 col-md-10 p-0">
 			<h1><strong>Neem contact op!</strong></h1>
 			<p class="fs-l">Interesse gekregen in wat wij doen, en wil je een evemenent aanmaken? Neem dan contact met ons op. Wil je op de hoogte worden gehouden van, of zelfs betrokken worden bij, onze ontwikkelingen? Laat dan je email-adres achter.</p>
-			<div class="row no-gutters justify-content-center mt-2 mt-md-5">
+			<div class="row no-gutters justify-content-center mt-2 mt-md-5" #target>
 				<div class="col-12 col-md-4 text-center fs-xl align-self-center my-2 my-md-0">
 					<div class="wrapper text-center mb-3">
 						<span class="icon-image"><i class="far fa-envelope-open large"></i><br></span>
