--- a/tickevents-placeholder/src/app/home/home.component.css
+++ b/tickevents-placeholder/src/app/home/home.component.css
@@ -1,104 +1,43 @@
-/* Chevron */
-.chevron-padding {
-    padding-bottom: 85px;
-}
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@800&display=swap');
 
-.chevron-container {
-    width: 24px;
-    height: 24px;
-    padding-right: 15px;
-    padding-left: 15px;
-    margin-right: auto;
-    margin-left: auto;
-}
-
-.chevron {
-    position: absolute;
-    width: 28px;
-    height: 8px;
-    opacity: 0;
-    transform: scale3d(0.5, 0.5, 0.5);
-    animation: move 3s ease-out infinite;
-}
-
-.chevron:first-child {
-    animation: move 3s ease-out 1s infinite;
-}
-
-.chevron:nth-child(2) {
-    animation: move 3s ease-out 2s infinite;
-}
-
-.chevron:before,
-.chevron:after {
-    content: ' ';
-    position: absolute;
-    top: 0;
-    height: 100%;
-    width: 51%;
-    background: #fff;
-}
-
-.chevron:before {
-    left: 0;
-    transform: skew(0deg, 30deg);
-}
-
-.chevron:after {
-    right: 0;
-    width: 50%;
-    transform: skew(0deg, -30deg);
-}
-
-.chevron-text {
-    display: block;
-    margin-top: 75px;
-    margin-left: -30px;
-    font-family: "Helvetica Neue", "Helvetica", Arial, sans-serif;
-    font-size: 12px;
-    color: #fff;
-    text-transform: uppercase;
-    white-space: nowrap;
-    opacity: .25;
-    animation: pulse 2s linear alternate infinite;
-}
-
-@keyframes move {
-    25% {
-        opacity: 1;
-    }
-
-    33% {
-        opacity: 1;
-        transform: translateY(30px);
-    }
-
-    67% {
-        opacity: 1;
-        transform: translateY(40px);
-    }
-
-    100% {
-        opacity: 0;
-        transform: translateY(55px) scale3d(0.5, 0.5, 0.5);
-    }
-}
-
-@keyframes pulse {
-    to {
-        opacity: 1;
-    }
-}
-
-/* Chevron end */
-
-.main-row {
-    height: 105vh;
+.title {
+    font-weight: bolder;
+    font-size: 2.5em;
+    font-family: 'Montserrat', sans-serif;
 }
 
 .subtitle {
-    font-family: 'Alata', sans-serif;
-    font-size: 1.5rem;
+    font-size: 1.35em;
+    font-weight: 400;
+}
+
+.btn {
+    background-color: #5D9881;
+    color: white;
+    font-weight: 500;
+    font-size: 1.1em;
+    transition-duration: 0s;
+    border-radius: 10px;
+    height: 45px;
+    padding: 8px;
+    box-shadow: 0 5px #9AC1B2;
+    transition: background-color 0.2s ease;
+}
+
+.btn:hover {
+    background-color: #467261;
+    transition: background-color 0.2s ease;
+}
+
+.btn:active {
+    background-color: #467261;
+    box-shadow: 0 3px #294F53;
+    transform: translateY(4px);
+    transition: background-color 0.2s ease;
+}
+
+.main-row {
+    min-height: 105vh;
 }
 
 .content {
@@ -110,7 +49,6 @@
 
 .svg-header {
     overflow: hidden;
-    height: 100% !important;
     -webkit-clip-path: polygon(0 0, 100% 0, 100% 95%, 0 100%);
     clip-path: polygon(0 0, 100% 0, 100% 95%, 0 100%);
 }
@@ -146,28 +84,7 @@
 }
 
 
-.btn {
-    background-color: #5D9881;
-    color: white;
-    transition-duration: 0s;
-    border-radius: 10px;
-    height: 50px;
-    padding: 8px;
-    box-shadow: 0 5px #9AC1B2;
-}
 
-.btn:hover {
-    background-color: #467261;
-    transition-duration: 0s;
-}
-
-.btn:active {
-    background-color: #467261;
-    box-shadow: 0 3px #294F53;
-    transform: translateY(4px);
-    transition-duration: 0s;
-    height: 50px;
-}
 
 .tickets-img {
     max-width: 100%;
@@ -310,9 +227,14 @@ ol li::before {
 
 }
 
+/* md-breakpoint */
 @media (min-width: 765px) {
+    .title {
+        font-size: 4em;
+    }
+
     .subtitle {
-        font-size: 2rem;
+        font-size: 1.5em;
     }
 
     .third-row {
@@ -320,7 +242,11 @@ ol li::before {
     }
 }
 
+/* lg-breakpoint */
 @media (min-width: 1200px) {
+    .title {
+        font-size: 5em
+    }
     .tickevents-title {
         font-size: 180px;
     }
