--- a/tickevents-placeholder/src/app/home/home.component.html
+++ b/tickevents-placeholder/src/app/home/home.component.html
@@ -2,7 +2,7 @@
 <div class="container-fluid p-0 w header-padding">
 
 	<!-- Title screen. First screen you'll see when opening the website -->
-	<div class="row no-gutters main-row mnh-100vh">
+	<div class="row no-gutters mnh-100vh">
 		<div class="col">
 			<!-- background -->
 			<div class="row mnh-100 svg-header no-gutters">
@@ -22,7 +22,7 @@
 				<div class="container px-4 overflow-hidden">
 					<div class="row mnh-80 align-content-center pt-5 animate__animated animate__fadeInRight">
 						<div class="col-12">
-							<h1 class="title">1 EURO PER TICKET. <br>ALL INCLUSIVE</h1>
+							<h1 class="title ft-montserrat">1 EURO PER TICKET. <br>ALL INCLUSIVE</h1>
 						</div>
 						<div class="col-12 col-md-8 mt-4">
 							<p class="subtitle">Hou meer geld over aan het einde van je evenement met scherpe servicekosten van Tickevents. Zo kun je meer, vaker, en grotere evenementen organiseren!</p>
@@ -48,7 +48,6 @@
 			<!-- End content-overlay -->
 		</div>
 	</div>
-
 
 	<!-- The second part of the website that you'll see when scrolling down -->
 	<div class="row no-gutters blue justify-content-center  mt-4">
