Updated the second part of the websit

--- a/tickevents-placeholder/src/app/header/header.component.css
+++ b/tickevents-placeholder/src/app/header/header.component.css
@@ -3,6 +3,10 @@
     height: 75px !important;
 }
 
+.container {
+    min-height: 75px;
+}
+
 #navContent.show, #navContent.collapsing {
     background-color: white;
 }
