--- a/tickevents-placeholder/src/app/header/header.component.html
+++ b/tickevents-placeholder/src/app/header/header.component.html
@@ -1,17 +1,17 @@
-<nav class="navbar navbar-expand-lg navbar-light fixed-top w">
+<nav class="navbar navbar-expand-lg navbar-light fixed-top w p-0">
     <div class="container">
         <!-- Logo on large displays (expanded navbar) -->
-        <div class="navbar-brand" routerLink="/home">
+        <div class="navbar-brand pl-3" routerLink="/home">
             <img src="../../assets/Logo Black.svg">
         </div>
 
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navContent"
+        <button class="navbar-toggler pr-3" type="button" data-toggle="collapse" data-target="#navContent"
             aria-controls="navContent" aria-expanded="false" aria-label="Toggle navigation">
             <i class="fas fa-bars"></i>
         </button>
 
         <div class="collapse navbar-collapse mt-2 p-3 ft-alata fs-lr" id="navContent">
-            <div class="navbar-nav b ml-auto    ">
+            <div class="navbar-nav b ml-auto">
                 <a class="nav-link" data-toggle="collapse" data-target="#navContent" routerLink="/home"
                     routerLinkActive="active">Home</a>
                 <a class="nav-link" data-toggle="collapse" data-target="#navContent" routerLink="/about"
