--- a/tickevents-placeholder/src/app/home/home.component.html
+++ b/tickevents-placeholder/src/app/home/home.component.html
@@ -25,7 +25,9 @@
 							<h1 class="title ft-montserrat">1 EURO PER TICKET. <br>ALL INCLUSIVE</h1>
 						</div>
 						<div class="col-12 col-md-8 mt-4">
-							<p class="subtitle">Hou meer geld over aan het einde van je evenement met scherpe servicekosten van Tickevents. Zo kun je meer, vaker, en grotere evenementen organiseren!</p>
+							<p class="subtitle">Hou meer geld over aan het einde van je evenement met scherpe
+								servicekosten van Tickevents. Zo kun je meer, vaker, en grotere evenementen organiseren!
+							</p>
 						</div>
 						<div class="w-100"></div>
 						<div class="col-6 col-md-5 col-lg-4 col-xl-3 my-3">
@@ -50,57 +52,39 @@
 	</div>
 
 	<!-- The second part of the website that you'll see when scrolling down -->
-	<div class="row no-gutters blue justify-content-center  mt-4">
-		<div class="col-12 col-sm-11 col-md-10">
-			<div class="row no-gutters">
+	<div class="row no-gutters blue py-5">
+		<div class="col">
+			<div class="container">
+				<div class="row no-gutters align-content-center">
 
-				<!-- Tickets image -->
-				<div class="col-12 col-md-6 order-md-1 order-2 align-content-center text-center">
-					<span class="helper"></span>
-					<img src="../assets/double-tickets.svg" alt="tickets" class="tickets-img px-3">
+					<!-- Tickets image -->
+					<div class="col-12 col-md-6 text-center">
+						<img src="../assets/double-tickets.svg" alt="tickets" class="tickets-img px-3">
+					</div>
+					<!-- End tickets image -->
+
+					<!-- Text section -->
+					<div class="col-12 col-md-6 h-auto">
+						<div class="row no-gutters align-content-center h-100">
+							<div class="col-12">
+								<h5 class="m-0">Lage servicekosten</h5>
+							</div>
+							<div class="col-12">
+								<h2 class="section-title">Lage servicekosten dankzij kleinschaligheid en in-house
+									development
+								</h2>
+							</div>
+							<div class="col-12">
+								<p>Jij wilt zoveel mogelijk winst maken uit jouw verkochte ticket. Tickevents snapt dit,
+									en bied
+									jou de scherpe servicekosten van €1,- per verkocht ticket. Omdat dit platform met de
+									hand is
+									gemaakt, blijven de servicekosten laag, en verdien jij meer per verkocht ticket!</p>
+							</div>
+						</div>
+					</div>
+					<!-- End text section -->
 				</div>
-				<!-- End tickets image -->
-
-				<!-- Text section -->
-				<div class="col-12 col-md-6 order-md-2 order-1 px-3">
-					<h1 class="ft-alata" ngsReveal><Strong>Wat is Tickevents?</Strong></h1>
-					<p class="text-justify  fs-l ">Tickevents is een nieuw online platform om jouw tickets voor je
-						evenement te verkopen tegen
-						scherpe servicekosten en een persoonlijke benadering. Bij Tickevents staan we voor:</p>
-
-					<!-- Start ordered list -->
-					<ol ngsRevealSet [ngsSelector]="'.summing-title'">
-						<li>
-							<strong class="summing-title">Lage Servicekosten:</strong>
-							<br>
-							<div class="text-justify">
-								Wij ontwikkelen onze eigen software, waardoor wij je servicekosten enorm kunnen drukken.
-								Hierdoor hou je meer geld over aan een verkocht ticket!
-							</div>
-						</li>
-						<li>
-							<strong class="summing-title">Enorm persoonlijke en betrokken ervaring:</strong>
-							<br>
-							<div class="text-justify">
-								Wij zijn klein, maar dat zorgt er wel voor dat we een ongekend persoonlijke behandeling
-								en
-								ervaring kunnen bieden. Wij willen graag met je meedenken over je evenement en hoe wij
-								ons
-								platform kunnen verbeteren.
-							</div>
-						</li>
-						<li>
-							<strong class="summing-title">Betrouwbare afspraken:</strong>
-							<br>
-							<div class="text-justify">
-								Geen onverwachte of late uitbetaling, maar alles netjes volgens afspraak. Omdat wij je
-								persoonlijk kennen, vinden we het wel zo netjes om ons aan deze afspraken te houden.
-							</div>
-						</li>
-					</ol>
-					<!-- End ordered list -->
-				</div>
-				<!-- End text section -->
 			</div>
 		</div>
 	</div>
