--- a/tickevents-placeholder/src/app/home/home.component.html
+++ b/tickevents-placeholder/src/app/home/home.component.html
@@ -19,7 +19,7 @@
 
 			<!-- content overlay -->
 			<div class="row content mnh-100 no-gutters justify-content-center">
-				<div class="container px-4 overflow-hidden">
+				<div class="container px-4 px-md-0 overflow-hidden">
 					<div class="row mnh-80 align-content-center pt-5 animate__animated animate__fadeInRight">
 						<div class="col-12">
 							<h1 class="title ft-montserrat">1 EURO PER TICKET. <br>ALL INCLUSIVE</h1>
@@ -54,24 +54,23 @@
 	<!-- The second part of the website that you'll see when scrolling down -->
 	<div class="row no-gutters blue py-5">
 		<div class="col">
-			<div class="container">
+			<div class="container px-4 px-md-0">
 				<div class="row no-gutters align-content-center">
 
 					<!-- Tickets image -->
-					<div class="col-12 col-md-6 text-center">
+					<div class="col-12 col-md-6 text-center order-2 order-md-1">
 						<img src="../assets/double-tickets.svg" alt="tickets" class="tickets-img px-3">
 					</div>
 					<!-- End tickets image -->
 
 					<!-- Text section -->
-					<div class="col-12 col-md-6 h-auto">
+					<div class="col-12 col-md-6 h-auto order-1 order-md-2">
 						<div class="row no-gutters align-content-center h-100">
 							<div class="col-12">
 								<h5 class="m-0">Lage servicekosten</h5>
 							</div>
 							<div class="col-12">
-								<h2 class="section-title">Lage servicekosten dankzij kleinschaligheid en in-house
-									development
+								<h2 class="section-title">Lage servicekosten = meer winst onder de streep
 								</h2>
 							</div>
 							<div class="col-12">
@@ -90,27 +89,36 @@
 	</div>
 
 	<!-- Reviews section carousel -->
-	<div class="row no-gutters justify-content-center third-row py-5 mt-4 align-content-center">
-		<div class="col-12 col-sm-11 col-md-10">
-			<div id="reviewCarousel" class="carousel slide w-100" data-ride="carousel" data-interval="7000" ngsReveal>
+	<div class="row no-gutters justify-content-center third-row py-5 align-content-center mnh-25vh">
+		<div class="container px-4 px-md-0">
+			<div id="quoteCarousel" class="carousel slide" data-ride="carousel">
 				<div class="carousel-inner">
 					<div class="carousel-item active">
-						<div class="w-100 d-block">
-							<h1 class="text-center mx-auto lead quote"><i>"Tickevents heeft mij een hoop zorgen en
+						<div class="carousel-wrapper">
+							<h1 class="text-center mx-auto lead quote"><i>"Tickevents heeft mij een hoop zorgen
+									en
 									kosten
 									bespaard! De
-									oprichter komt persoonlijk langs om een bakje koffie te drinken en de plannen van je
-									workshop bespreken, om te kijken hoe we goed samen kunnen werken. Op de dag van het
-									evenement kwam hij zelfs meehelpen met scannen en ondersteunde hij waar nodig met de
+									oprichter komt persoonlijk langs om een bakje koffie te drinken en de
+									plannen
+									van je
+									workshop bespreken, om te kijken hoe we goed samen kunnen werken. Op de dag
+									van
+									het
+									evenement kwam hij zelfs meehelpen met scannen en ondersteunde hij waar
+									nodig
+									met de
 									ticketverkoop."</i></h1>
+							<div class="carousel-caption">
+								<h5>Marlijn de Jager</h5>
+								<p>Organiseert kleine feesten in kroegen</p>
+							</div>
 						</div>
-						<div class="carousel-caption d-block mt-3">
-							<h5>Marlijn de Jager</h5>
-							<p>Organiseert kleine feesten in kroegen</p>
-						</div>
+
 					</div>
 					<div class="carousel-item">
-						<div class="w-100 d-block">
+						<div class="carousel-wrapper">
+
 							<h1 class="text-center w-75 mx-auto lead quote"><i>"Top service en zeer scherpe
 									servicekosten. Dit
 									vind je niet snel bij een grote ticketverkoper."</i></h1>
@@ -121,11 +129,15 @@
 						</div>
 					</div>
 					<div class="carousel-item">
-						<div class="w-100 d-block">
-							<h1 class="text-center w-75 mx-auto lead quote"><i>"Het is misschien een eenvoudige service
+						<div class="carousel-wrapper">
+
+							<h1 class="text-center w-75 mx-auto lead quote"><i>"Het is misschien een eenvoudige
+									service
 									zonder
-									al te veel poespas, maar wat ze meestal zeggen: 'minder is meer', en dat geldt zeker
-									voor Tickevents. Weinig servicekosten en de enorm goede en persoonlijke benadering
+									al te veel poespas, maar wat ze meestal zeggen: 'minder is meer', en dat geldt
+									zeker
+									voor Tickevents. Weinig servicekosten en de enorm goede en persoonlijke
+									benadering
 									is het dubbel en dwars waard."</i></h1>
 							<div class="carousel-caption d-block mt-3">
 								<h5>Steef Reusken</h5>
