Moved footer to own component

--- a/tickevents-placeholder/src/app/home/home.component.html
+++ b/tickevents-placeholder/src/app/home/home.component.html
@@ -251,39 +251,7 @@
 	</div>
 
 	<!-- Footer -->
-	<div class="row no-gutters footer w mnh-25vh mt-5 pt-5 pb-2 justify-content-center fs-l">
-		<div class="col-12 text-center mb-3">
-			<img src="../assets/Full Logo White Transparent.png" alt="Tickevents logo" class="footer-logo">
-		</div>
-		<div class="w-100"></div>
-		<div class="col text-center mb-2">
-			<i class="far fa-envelope-open mr-3"></i>info@tickevents.nl
-		</div>
-		<div class="w-100"></div>
-		<div class="col text-center mb-2">
-			<i class="fas fa-phone mr-3"></i>(+31) 6 40096718
-		</div>
-		<div class="w-100"></div>
-		<div class="col text-center mb-2">
-			<span class="font-weight-bold">KvK:</span> 78568706
-		</div>
-		<div class="w-100"></div>
-		<div class="col text-center mb-2">
-			<span class="font-weight-bold">BTW-ID:</span> NL03348034B41
-		</div>
-		<div class="w-100"></div>
-		<div class="col mt-5 mb-4">
-			<div class="row no-gutters justify-content-center">
-				<div class="col-auto"><a routerLink="/disclaimer" class="link gr">Disclaimer</a></div>
-				<div class="col-auto"><a routerLink="/privacy" class="link gr">Privacybeleid</a></div>
-				<div class="col-auto"><a routerLink="/contact" class="link gr">Contact</a></div>
-			</div>
-		</div>
-		<div class="w-100"></div>
-		<div class="col-10 col-md-8 col-lg-7 col-xl-6 border-top border-secondary text-center pt-2 gr small">
-			<span>&copy; 2020 Rondelle Software Solutions. Alle rechten voorbehouden.</span>
-		</div>
-	</div>
+	<app-footer></app-footer>
 </div>
 
 <router-outlet></router-outlet>
